add comment css

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,9 @@
+/*
+Theme Name: Curriculum Vitae HTML5 By AyudaOnline.CL
+Theme URI: http://www.ayudaonline.cl/
+Description: Curriculum Vitae en HTML5, estilo moderno
+Author: René Calfin rene.calfin@gmail.com
+Version: 0.001*/
 
 // Import Variables 
 @import "variables.scss";
