--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/*
+Theme Name: Curriculum Vitae HTML5 By AyudaOnline.CL
+Theme URI: http://www.ayudaonline.cl/
+Description: Curriculum Vitae en HTML5, estilo moderno
+Author: René Calfin rene.calfin@gmail.com
+Version: 0.001*/
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;900&display=swap");
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
